--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -7,37 +7,76 @@
     tools:context=".CadastroActivity">
 
     <EditText
+        android:id="@+id/editTextTextPersonName8"
+        android:layout_width="288dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="29dp"
+        android:ems="10"
+        android:hint="CPF"
+        android:inputType="textPersonName"
+        android:textColorHighlight="@color/black"
+        android:textColorLink="@color/laranjaVolait"
+        app:layout_constraintBottom_toTopOf="@+id/button3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.467"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <EditText
         android:id="@+id/editTextTextPersonName4"
-        android:layout_width="289dp"
-        android:layout_height="52dp"
+        android:layout_width="288dp"
+        android:layout_height="46dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="29dp"
-        android:layout_marginBottom="304dp"
+        android:layout_marginBottom="412dp"
         android:ems="10"
-        android:hint="Login"
+        android:hint="nome completo"
         android:inputType="textPersonName"
         android:textColorHighlight="@color/black"
         android:textColorLink="@color/laranjaVolait"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintHorizontal_bias="0.467"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/editTextTextPersonName6"
+        android:layout_width="288dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="29dp"
+        android:ems="10"
+        android:hint="email"
+        android:inputType="textPersonName"
+        android:textColorHighlight="@color/black"
+        android:textColorLink="@color/laranjaVolait"
+        app:layout_constraintBottom_toTopOf="@+id/button3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.467"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="182dp"
-        android:layout_height="38dp"
+        android:layout_width="139dp"
+        android:layout_height="28dp"
+        android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName4"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.244"
+        app:layout_constraintHorizontal_bias="0.154"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.872"
+        app:layout_constraintTop_toTopOf="@+id/imageView2"
+        app:layout_constraintVertical_bias="0.994"
         app:srcCompat="@drawable/cadastroo" />
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="269dp"
+        android:layout_width="227dp"
         android:layout_height="25dp"
         android:layout_marginStart="53dp"
         android:layout_marginEnd="53dp"
@@ -47,34 +86,33 @@
         android:textSize="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.527"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.906" />
+        app:layout_constraintVertical_bias="0.977" />
 
     <EditText
         android:id="@+id/editTextTextPersonName3"
         android:layout_width="288dp"
         android:layout_height="46dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="20dp"
         android:layout_marginEnd="29dp"
+        android:layout_marginBottom="232dp"
         android:ems="10"
-        android:hint="Senha"
+        android:hint="nome social"
         android:inputType="textPersonName"
         android:textColorHighlight="@color/black"
         android:textColorLink="@color/laranjaVolait"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.483"
+        app:layout_constraintHorizontal_bias="0.467"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.09" />
 
     <EditText
         android:id="@+id/editTextTextPersonName5"
-        android:layout_width="286dp"
-        android:layout_height="47dp"
+        android:layout_width="288dp"
+        android:layout_height="46dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="29dp"
         android:ems="10"
@@ -84,10 +122,10 @@
         android:textColorLink="@color/laranjaVolait"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.468"
+        app:layout_constraintHorizontal_bias="0.467"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
-        app:layout_constraintVertical_bias="0.058" />
+        app:layout_constraintVertical_bias="0.037" />
 
     <Button
         android:id="@+id/button3"
@@ -101,24 +139,34 @@
         android:textSize="50px"
         app:layout_constraintBottom_toTopOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.516"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.976" />
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="217dp"
-        android:layout_height="209dp"
+        android:layout_width="168dp"
+        android:layout_height="151dp"
         android:layout_marginStart="80dp"
         android:layout_marginEnd="81dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView4"
+        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName4"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.515"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.505"
+        app:layout_constraintVertical_bias="0.131"
         app:srcCompat="@drawable/pana" />
+
+    <EditText
+        android:id="@+id/editTextTextPassword"
+        android:layout_width="288dp"
+        android:layout_height="46dp"
+        android:ems="10"
+        android:inputType="textPassword"
+        android:hint="senha"
+        app:layout_constraintBottom_toTopOf="@+id/button3"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName8"
+        app:layout_constraintVertical_bias="0.363"
+        tools:layout_editor_absoluteX="61dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
