--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="laranjaVolait">#E46F44</color>
     <color name="backgray">#E5E5E5</color>
     <color name="gray">#6B6E70</color>
+    <color name="yellow_cupom">#FFF975</color>
 </resources>
