--- a/app/src/main/res/layout/activity_privacidade.xml
+++ b/app/src/main/res/layout/activity_privacidade.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    tools:context=".PrivacidadeActivity"
     android:background="@color/backgray">
 
     <ImageView
@@ -13,11 +13,10 @@
         android:layout_height="70dp"
         android:layout_marginTop="0dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.567"
+        app:layout_constraintHorizontal_bias="0.561"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/menu__1_" />
-
 
     <ImageView
         android:id="@+id/imageView11"
@@ -29,8 +28,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView9"
         app:srcCompat="@drawable/volaitmain" />
-
-
 
     <ImageView
         android:id="@+id/imageView8"
@@ -52,7 +49,8 @@
         app:layout_constraintHorizontal_bias="0.044"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView8"
-        app:srcCompat="@drawable/home__1_" />
+        app:srcCompat="@drawable/home"
+        />
 
     <ImageButton
         android:id="@+id/imageButton3"
@@ -73,13 +71,12 @@
         android:layout_width="54dp"
         android:layout_height="55dp"
         android:backgroundTint="#FFFFFF"
-        android:onClick="TelaMenu"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.955"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView8"
-        app:srcCompat="@drawable/perfil" />
+        app:srcCompat="@drawable/perfil__1_" />
 
     <ImageButton
         android:id="@+id/imageButton2"
