--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -48,6 +48,7 @@
         android:layout_height="55dp"
         android:layout_marginBottom="1dp"
         android:backgroundTint="#FFFFFF"
+        android:onClick="TelaLancamento"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.32"
